syntax = "proto3";

package proto;

option go_package = "user/";

service User {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
}

message UserModel {
  string id = 1;
  string email = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}
message CreateUserResponse {
  UserModel user = 1;
}

message GetUserRequest {
  string id = 1;
}
message GetUserResponse {
  UserModel user = 1;
}

message UpdateUserRequest {
  string email = 1;
  string password = 2;
}
message UpdateUserResponse {
  UserModel user = 1;
}

message DeleteUserRequest {
  string id = 1;
}
message DeleteUserResponse {
  string id = 1;
}

message ListUsersRequest {}
message ListUsersResponse {
  repeated UserModel users = 1;
}